Lab2/Code/syntax.output
State 49 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID LP error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC

   26 StmtList: Stmt StmtList
   27         | %empty

   28 Stmt: Exp SEMI
   29     | CompSt
   30     | RETURN Exp SEMI
   31     | IF LP Exp RP Stmt
   32     | IF LP Exp RP Stmt ELSE Stmt
   33     | WHILE LP Exp RP Stmt
   34     | error SEMI

   35 DefList: Def DefList
   36        | %empty

   37 Def: Specifier DecList SEMI
   38    | Specifier error SEMI

   39 DecList: Dec
   40        | Dec COMMA DecList

   41 Dec: VarDec
   42    | VarDec ASSIGNOP Exp

   43 Exp: Exp ASSIGNOP Exp
   44    | Exp AND Exp
   45    | Exp OR Exp
   46    | Exp RELOP Exp
   47    | Exp PLUS Exp
   48    | Exp MINUS Exp
   49    | Exp STAR Exp
   50    | Exp DIV Exp
   51    | LP Exp RP
   52    | MINUS Exp
   53    | NOT Exp
   54    | ID LP Args RP
   55    | ID LP RP
   56    | Exp LB Exp RB
   57    | Exp DOT ID
   58    | ID
   59    | INT
   60    | FLOAT
   61    | error

   62 Args: Exp COMMA Args
   63     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 21 34 38 61
    INT <node> (258) 18 59
    FLOAT <node> (259) 60
    ID <node> (260) 14 16 17 19 20 21 54 55 57 58
    TYPE <node> (261) 10
    COMMA <node> (262) 9 22 40 62
    DOT <node> (263) 57
    SEMI <node> (264) 4 5 28 30 34 37 38
    RELOP <node> (265) 46
    ASSIGNOP <node> (266) 42 43
    PLUS <node> (267) 47
    MINUS <node> (268) 48 52
    STAR <node> (269) 49
    DIV <node> (270) 50
    AND <node> (271) 44
    OR <node> (272) 45
    NOT <node> (273) 53
    LP <node> (274) 19 20 21 31 32 33 51 54 55
    RP <node> (275) 19 20 21 31 32 33 51 54 55
    LB <node> (276) 18 56
    RB <node> (277) 18 56
    LC <node> (278) 12 25
    RC <node> (279) 12 25
    IF <node> (280) 31 32
    ELSE <node> (281) 32
    WHILE <node> (282) 33
    STRUCT <node> (283) 12 13
    RETURN <node> (284) 30
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <node> (32)
        on left: 1
        on right: 0
    ExtDefList <node> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (34)
        on left: 4 5 6 7
        on right: 2
    ExtDecList <node> (35)
        on left: 8 9
        on right: 4 9
    Specifier <node> (36)
        on left: 10 11
        on right: 4 5 6 24 37 38
    StructSpecifier <node> (37)
        on left: 12 13
        on right: 11
    OptTag <node> (38)
        on left: 14 15
        on right: 12
    Tag <node> (39)
        on left: 16
        on right: 13
    VarDec <node> (40)
        on left: 17 18
        on right: 8 9 18 24 41 42
    FunDec <node> (41)
        on left: 19 20 21
        on right: 6
    VarList <node> (42)
        on left: 22 23
        on right: 19 22
    ParamDec <node> (43)
        on left: 24
        on right: 22 23
    CompSt <node> (44)
        on left: 25
        on right: 6 29
    StmtList <node> (45)
        on left: 26 27
        on right: 25 26
    Stmt <node> (46)
        on left: 28 29 30 31 32 33 34
        on right: 26 31 32 33
    DefList <node> (47)
        on left: 35 36
        on right: 12 25 35
    Def <node> (48)
        on left: 37 38
        on right: 35
    DecList <node> (49)
        on left: 39 40
        on right: 37 40
    Dec <node> (50)
        on left: 41 42
        on right: 39 40
    Exp <node> (51)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
        on right: 28 30 31 32 33 42 43 44 45 46 47 48 49 50 51 52 53 56 57 62 63
    Args <node> (52)
        on left: 62 63
        on right: 54 62


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error .

    $default  reduce using rule 7 (ExtDef)


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 9

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 14
    SEMI  shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 10

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 11

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP
   21       | ID . LP error RP

    LP  shift, and go to state 20

    $default  reduce using rule 17 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 24

    CompSt  go to state 25


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 8
    DefList          go to state 27
    Def              go to state 28


State 20

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP
   21       | ID LP . error RP

    error   shift, and go to state 29
    TYPE    shift, and go to state 2
    RP      shift, and go to state 30
    STRUCT  shift, and go to state 3

    Specifier        go to state 31
    StructSpecifier  go to state 8
    VarList          go to state 32
    ParamDec         go to state 33


State 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 22

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 17


State 23

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 36


State 24

   25 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 8
    DefList          go to state 37
    Def              go to state 28


State 25

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 26

   37 Def: Specifier . DecList SEMI
   38    | Specifier . error SEMI

    error  shift, and go to state 38
    ID     shift, and go to state 34

    VarDec   go to state 39
    DecList  go to state 40
    Dec      go to state 41


State 27

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 42


State 28

   35 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 8
    DefList          go to state 43
    Def              go to state 28


State 29

   21 FunDec: ID LP error . RP

    RP  shift, and go to state 44


State 30

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 31

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  go to state 45


State 32

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 46


State 33

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 47

    $default  reduce using rule 23 (VarList)


State 34

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 35

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 36

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 48


State 37

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 49
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 24
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    RETURN  shift, and go to state 58

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 60
    Stmt      go to state 61
    Exp       go to state 62


State 38

   38 Def: Specifier error . SEMI

    SEMI  shift, and go to state 63


State 39

   18 VarDec: VarDec . LB INT RB
   41 Dec: VarDec .
   42    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 64
    LB        shift, and go to state 23

    $default  reduce using rule 41 (Dec)


State 40

   37 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 65


State 41

   39 DecList: Dec .
   40        | Dec . COMMA DecList

    COMMA  shift, and go to state 66

    $default  reduce using rule 39 (DecList)


State 42

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 43

   35 DefList: Def DefList .

    $default  reduce using rule 35 (DefList)


State 44

   21 FunDec: ID LP error RP .

    $default  reduce using rule 21 (FunDec)


State 45

   18 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 24 (ParamDec)


State 46

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 47

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 31
    StructSpecifier  go to state 8
    VarList          go to state 67
    ParamDec         go to state 33


State 48

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 49

   34 Stmt: error . SEMI
   61 Exp: error .

    SEMI  shift, and go to state 68

    SEMI      [reduce using rule 61 (Exp)]
    $default  reduce using rule 61 (Exp)


State 50

   59 Exp: INT .

    $default  reduce using rule 59 (Exp)


State 51

   60 Exp: FLOAT .

    $default  reduce using rule 60 (Exp)


State 52

   54 Exp: ID . LP Args RP
   55    | ID . LP RP
   58    | ID .

    LP  shift, and go to state 69

    $default  reduce using rule 58 (Exp)


State 53

   52 Exp: MINUS . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 71


State 54

   53 Exp: NOT . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 72


State 55

   51 Exp: LP . Exp RP

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 73


State 56

   31 Stmt: IF . LP Exp RP Stmt
   32     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 74


State 57

   33 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 75


State 58

   30 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 76


State 59

   29 Stmt: CompSt .

    $default  reduce using rule 29 (Stmt)


State 60

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 77


State 61

   26 StmtList: Stmt . StmtList

    error   shift, and go to state 49
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    MINUS   shift, and go to state 53
    NOT     shift, and go to state 54
    LP      shift, and go to state 55
    LC      shift, and go to state 24
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    RETURN  shift, and go to state 58

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 78
    Stmt      go to state 61
    Exp       go to state 62


State 62

   28 Stmt: Exp . SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    DOT       shift, and go to state 79
    SEMI      shift, and go to state 80
    RELOP     shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    LB        shift, and go to state 89


State 63

   38 Def: Specifier error SEMI .

    $default  reduce using rule 38 (Def)


State 64

   42 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 90


State 65

   37 Def: Specifier DecList SEMI .

    $default  reduce using rule 37 (Def)


State 66

   40 DecList: Dec COMMA . DecList

    ID  shift, and go to state 34

    VarDec   go to state 39
    DecList  go to state 91
    Dec      go to state 41


State 67

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 68

   34 Stmt: error SEMI .

    $default  reduce using rule 34 (Stmt)


State 69

   54 Exp: ID LP . Args RP
   55    | ID LP . RP

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55
    RP     shift, and go to state 92

    Exp   go to state 93
    Args  go to state 94


State 70

   61 Exp: error .

    $default  reduce using rule 61 (Exp)


State 71

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   52    | MINUS Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    DOT   shift, and go to state 79
    STAR  shift, and go to state 85
    DIV   shift, and go to state 86
    LB    shift, and go to state 89

    $default  reduce using rule 52 (Exp)


State 72

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   53    | NOT Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    DOT  shift, and go to state 79
    LB   shift, and go to state 89

    $default  reduce using rule 53 (Exp)


State 73

   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   51    | LP Exp . RP
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    DOT       shift, and go to state 79
    RELOP     shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    RP        shift, and go to state 95
    LB        shift, and go to state 89


State 74

   31 Stmt: IF LP . Exp RP Stmt
   32     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 96


State 75

   33 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 97


State 76

   30 Stmt: RETURN Exp . SEMI
   43 Exp: Exp . ASSIGNOP Exp
   44    | Exp . AND Exp
   45    | Exp . OR Exp
   46    | Exp . RELOP Exp
   47    | Exp . PLUS Exp
   48    | Exp . MINUS Exp
   49    | Exp . STAR Exp
   50    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    DOT       shift, and go to state 79
    SEMI      shift, and go to state 98
    RELOP     shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    AND       shift, and go to state 87
    OR        shift, and go to state 88
    LB        shift, and go to state 89


State 77

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 78

   26 StmtList: Stmt StmtList .

    $default  reduce using rule 26 (StmtList)


State 79

   57 Exp: Exp DOT . ID

    ID  shift, and go to state 99


State 80

   28 Stmt: Exp SEMI .

    $default  reduce using rule 28 (Stmt)


State 81

   46 Exp: Exp RELOP . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 100


State 82

   43 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 101


State 83

   47 Exp: Exp PLUS . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 102


State 84

   48 Exp: Exp MINUS . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 103


State 85

   49 Exp: Exp STAR . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 104


State 86

   50 Exp: Exp DIV . Exp

    error  shift, and go to state 70
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    NOT    shift, and go to state 54
    LP     shift, and go to state 55

    Exp  go to state 105


State 87

   44 Exp: Exp AND . Exp
